# SeqExplainer

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
archive/: _feature_attribution.py  _filter_viz.py  _in_silico.py  _sequence.py
interpret/: __init__.py  _feature_attribution.py  _filter_viz.py  _interpret_utils.py  _references.py  _seq_preprocess.py
notebooks/: SeqExplainer_logo.ipynb  refactor_filter_viz.ipynb  train_DeepSTARR.ipynb
notebooks/.ipynb_checkpoints/: implement_tf_modisco-checkpoint.ipynb  refactor_feature_attribution-checkpoint.ipynb  refactor_interpret-checkpoint.ipynb
notebooks/implement/: implement_gia.ipynb  implement_reference.ipynb  implement_tf_modisco.ipynb
notebooks/refactor/: refactor_feature_attribution.ipynb  refactor_seq.ipynb
notebooks/test/: basic_tests.ipynb  calculate_attributions.ipynb  generate_references.ipynb  test_feature_attribution.ipynb  test_layer_outs.ipynb
preprocess/: __init__.py  _seq_preprocess.py
seqexplainer/: __init__.py  _attribution_analysis.py  _attributions.py  _deprecated.py  _experimental.py  _feature_attribution.py  _filter_viz.py  _filters.py  _generative.py  _gia.py  _ism.py  _layer_outs.py  _modisco.py  _null_models.py  _perturb.py  _plot.py  _references.py  _seq.py  _tools.py  _utils.py  global_importance_analysis.py
seqexplainer/.ipynb_checkpoints/: _attribution_analysis-checkpoint.py  _plot-checkpoint.py
seqexplainer/attributions/: __init__.py  _attributions.py  _modisco.py  _plot.py  _references.py
tests/: test.py  unittest.py
tutorials/: run_modisco.ipynb
(+22 files in other folders)
