[tool.poetry]
name = "seqexplainer"
version = "0.1.0"
description = "Interpreting sequence-to-function machine learning models"
authors = ["adamklie <aklie@ucsd.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
captum = "0.5"
yuzu-ism = "^0.0.1"
modisco-lite = "^2.2.0"
logomaker = "^0.8"
numpy = "~1.23.5"
torch = "^1.12.0"
tqdm = "^4.65.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
